src/style.css
* {
    margin: 0px;
    padding: 0px;
    box-sizing: border-box;
    overflow-x: hidden;
}

@font-face {
    font-family: 'HeadingFont';
    src: url('./assets/g80-rd-standard-demo-generic-19517/Generic-G80-RD-Standard-DEMO.otf') format('opentype');
    font-weight: 600;
    font-style: normal;
}

@font-face {
    font-family: 'MainFont';
    src: url('./assets/typold-font/Typold-Book500.otf') format('opentype');
    font-weight: 600;
    font-style: normal;
}


body,
html {
    width: 100%;
    height: 100vh;
}

body {
    background-color: #060606;
}



.content-primary::before {
    content: '';
    background-image: url(./assets/background.jpg);
    background-repeat: no-repeat;
    background-size: cover;
    position: absolute;
    top: 0px;
    right: 0px;
    bottom: 0px;
    left: 0px;
}

.content-secondary {
    width: 100vw;
}
.content-secondary {
    background-color: #131313;
}

/*nav CSS */

.navbar {
    color: #eee;
    background-color: black;
    position: sticky;
    top: 0px;
    z-index: 10;
    font-family: sans-serif;
    display: flex;
    align-items: center;
    justify-content: center;
    text-align: center;
    column-gap: 3vw;
    width: 100%;
    height: 100px;
    padding: 0px 5%;
    font-size: clamp(1rem, 1.3vw, 1.5rem);
    letter-spacing: 1px;
}

.logo{
    margin-right: auto;
    width: min(16.5vw, 295px);

}

.search-form{
    display: flex;
    align-items: center;
    justify-content: center;
    margin-left: auto;
    width: min(15vw, 275px);
    flex-shrink: 1;
}

.search{
    height: 45px;
    flex-shrink: 1;
    width: inherit;
    background-color: #373737;
    border: none;
    border-radius: 25px;
    padding-left: 25px;
    font-size: clamp(1rem, 1.3vw, 1.5rem);
    color: white;
}

.search:focus{
    border: none;
    outline: none;
}

.search::placeholder{
    color: white;
}

.homepage, .menu, .about, .contact {
    height: fit-content;
    cursor: pointer;
    border-radius: 3px;
    padding: 10px 15px;
    font-weight: 400;
}
.homepage:hover, .menu:hover, .about:hover, .contact:hover {
    background-color: #373737;
}

.button-selected {
    color: #ffcc33;
}

/*landing page text */

.heading-container {
    color: white;
    position: absolute;
    top: 35%;
    left: 8%;
    width: 600px;
}

.main-heading {
    font-size: clamp(2.7rem, 5vw, 5.5rem);
    font-family: 'HeadingFont';
}

.heading-subtext {
    color: #f8d882;
    font-size: clamp(1.7rem, 2vw, 2rem);
    font-family: 'MainFont';
    margin-top: 10px;
}

.description-text {
    font-family: 'MainFont';
    font-size: clamp(1.3rem, 1.3vw, 1.5rem);
    margin-top: 30px;
}

/* Menu CSS */
.menu-container, .about-container, .contact-container{
    width: 75%;
    margin: 25px auto;
    padding-bottom: 25px;
    margin-top: 40px;
    color: white;
    position: relative;
    text-align: center;
    font-family: 'MainFont';
    font-size: clamp(1.3rem, 1.3vw, 1.5rem);
}

.menu-heading{
    font-family: 'HeadingFont';
    font-size: clamp(2rem, 3vw, 3rem);
}

.menu-button-container {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    align-items: center;
    margin-top: 15px;
}

.menu-button, .reservation-submit-button  {
    padding: 10px 15px;
    margin: 10px;
    height: fit-content;
    border: none;
    border-radius: 3px;
    outline: none;
    cursor: pointer;
    font-size: clamp(0.8rem, 1.5vw, 1.2rem);
    font-weight: bold;
    background-color: #ffcc33;
}

.menu-item-container{
    display: grid;
    justify-items: center;
    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
    gap: 15px;
    row-gap: 50px;
    margin-top: 25px;
}

.menu-card {
    background-size: cover;
    background-position: center;
    height: max(300px, 10vh);
    border-radius: 3px;
}

.menu-card-1 {
    background-image: url(./assets/menu-pics/menu1.jpg);
}

.menu-card-2 {
    background-image: url(./assets/menu-pics/menu2.jpg);
}

.menu-card-3 {
    background-image: url(./assets/menu-pics/menu3.jpg);
}

.menu-card-4 {
    background-image: url(./assets/menu-pics/menu4.jpg);
}

.menu-card-5 {
    background-image: url(./assets/menu-pics/menu5.jpg)
}

.menu-card-6 {
    background-image: url(./assets/menu-pics/menu6.jpg)
}

.menu-card-7 {
    background-image: url(./assets/menu-pics/menu7.jpg)
}

.menu-card-8 {
    background-image: url(./assets/menu-pics/menu8.jpg)
}

.menu-item-name {
    font-size: clamp(1.3rem, 1.3vw, 1.5rem);
    margin-top: 15px;
}

.menu-item-description {
    font-size: clamp(0.8rem, 1vw, 1.1rem);
    color: #ccc;
    margin-top: 10px;
}

.menu-item-price {
    margin-top: 10px;
    color: #ffcc33;
}

/* About Page */

.about-heading, .contact-heading {
    text-align: center;
    color: white;
    padding-bottom: 15px;
    margin-top: 40px;
    font-family: 'HeadingFont';
    font-size: clamp(2rem, 3vw, 3rem);
}

.about-subheading {
    font-family: 'HeadingFont';
    height: 100px;
    padding-left: 80px;
    display: grid;
    place-items: center;
    font-size: clamp(1.5rem, 2vw, 2rem);
    background-image: url(./assets/leaf.png);
    background-repeat: no-repeat;
    background-position: left center;
}

.about-image{
    background-image: url('./assets/restarant-pic.jpg');
    background-size: cover;
    background-position: center;
    grid-row:  1 / -1;
}

.about-content-container {
    display: grid;
    grid-template-columns: 4fr 5fr;
    grid-template-rows: 1fr 4fr 2fr;
    column-gap: 75px;
}

.about-right-container {
    grid-row: 1 / -1;
    display: flex;
    flex-direction: column;
}

.paragraph-container p {
    margin-top: 15px;
    font-size: clamp(0.8rem, 1.2vw, 1.2rem);
    color: #ccc;
}

/* About Icons */

.icons-container {
    display: flex;
    justify-content: space-around;
    margin-top: 50px;
}

.icon-1-image {
    background-image: url(./assets/about-icons/chef-hat.png);
    width: clamp(32px, 5vw, 64px);
    height: clamp(32px, 5vw, 64px);
    background-size: contain;
    margin: 0 auto;
}

.icon-2-image {
    background-image: url(./assets/about-icons/ingredients-icon.png);
    width: clamp(32px, 5vw, 64px);
    height: clamp(32px, 5vw, 64px);
    background-size: contain;
    margin: 0 auto;
}

.icon-3-image {
    background-image: url(./assets/about-icons/recipe-icon.png);
    width: clamp(32px, 5vw, 64px);
    height: clamp(32px, 5vw, 64px);
    background-size: contain;
    background-repeat: no-repeat;
    margin: 0 auto;
}

.icon-text {
    text-align: center;
    color: white;
    font-size: clamp(0.7rem, 1.1vw, 1.1rem);
    margin-top: 15px;
}

/* Contact Page */

.contact-container {
    display: grid;
    margin-top: 0px;
    column-gap: 25px;
    grid-template-columns: 3fr 2fr;
}

.book-heading {
    grid-column: 1 / -1;
    text-align: center;
    color: white;
    padding-bottom: 15px;
    margin-top: 40px;
    font-family: 'HeadingFont';
    font-size: clamp(1.5rem, 2vw, 2rem);
}

.hours-heading {
    text-align: center;
    color: white;
    padding-bottom: 15px;
    margin-top: 10px;
    font-family: 'HeadingFont';
    font-size: clamp(1.5rem, 2vw, 2rem);
}

.hours-text {
    font-size: clamp(0.8rem, 1vw, 1rem);
    margin-bottom: 30px;
}

.book-table-container {
    display: grid;
    grid-template-columns: 1fr 2fr;
}

.hours-container {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    background-color: black;
    border-radius: 3px;
    padding: 30px;
    color: #ccc;
}

.weekday-hours-container, .saturday-hours-container, .sunday-hours-container {
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding-bottom: 3px;
    margin-bottom: 20px;
    font-size: clamp(0.8rem, 1vw, 1rem);
    color: white;
    border-bottom: thin solid white;
}

.book-table-form {
    grid-column: 1 / -1;
    display: grid;
    grid-template-columns: 1fr 1fr;
    justify-items: center;
    gap: 20px;
}

form div {
    display: flex;
    flex-direction: column;
}

form div label {
    color: white;
    text-align: left;
    margin-bottom: 5px;
    color: #ffcc33;
    font-size: clamp(0.8rem, 1vw, 1.1rem);
}

.reservation-submit-button {
    grid-column: 1 / -1;
}


/* changes color of date and time picker to white */
::-webkit-calendar-picker-indicator {
    filter: invert(1);
}

/* Prevent autofill form from turning white */
input:-webkit-autofill,
input:-webkit-autofill:focus {
    transition: background-color 60000000s 0s, color 60000000s 0s;
}
input[data-autocompleted] {
    background-color: black !important;
}

/* change placeholder color */
::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
    color: #ccc;
    opacity: 1; /* Firefox */
  }
  
  :-ms-input-placeholder { /* Internet Explorer 10-11 */
    color: #ccc;
  }
  
  ::-ms-input-placeholder { /* Microsoft Edge */
    color: #ccc;
  }

form div input {
    width: min(300px, 20vw);
    height: 50px;
    font-size: 1.2rem;
    padding: 0px 10px;
    color: #ccc;
    background-color: #000;
    border-radius: 3px;
    outline: none;
    border: none;
}


@media screen {
    @media (max-width: 975px) {

        .content-primary::before {
            background-size: cover;
            background-position: right;
            filter: brightness(30%);
        }

        .heading-container {
            width: 100%;
            top: 25%;
            left: 0px;
            text-align: center;
        }

        .description-text{
            width: 60%;
            margin: 30px auto 0 auto;
        }

        /* About Page */

        .about-content-container {
            grid-template-columns: 1fr;
            grid-template-rows: 1fr 1fr;
            row-gap: 25px;
        }

        .about-heading {
            padding: 0px;
        }

        .about-image {
            grid-row: 1 / 2;
        }

        .about-right-container {
            grid-row: 2 / 3;
        }

        /* Contact Page */

        .contact-container {
            grid-template-columns: 1fr;
        }

        form div input {
            width: min(300px, 35vw);
        }
    }
}

